--- a/README.me
+++ b/README.me
@@ -1,1 +1,15 @@
-Dhruv, PYTHON, C, MATLAB blah blah blah
+# I’m Dhruv
+
+👀 I’m interested in 
+- C
+- Python
+- SQL
+- Julia
+- R
+- Definitely not Java
+
+🌱 I’m currently learning...
+- PyCaret
+
+🏫 I'm currently...
+- Speed-running computer engineering
